<b>Version 1.29</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Untermenü bei Einstellungsbutton hinzugefügt mit Autoplayeinstellungen, Feedbackformular, Fehlerbehebung, Lizenzschlüssel und Hilfe</li>
    <li>[<span style="color: red">FEATURE</span>] Lizenzschlüssel zur Verwendung des Feedbackformulars hinzugefügt.</li>
    <li>[<span style="color: red">FEATURE</span>] Feedbackformular hinzugefügt.</li>
</ul>
<b>Version 1.285</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Leerer Vor-/Zurück-Button führte zu Fehler beim Wechseln des Mediums mittels der beiden Buttons.</li>
    <li>[OPTIMIERUNG] "Dauer bis Übergang" in Autoplayeinstellungen springt nun auf 11 zurück, wenn der Wert unter 11 fällt.</li>
</ul>
<b>Version 1.284</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Erstes Element einer Playliste löste Fehler beim erstellen des Vor- und Zurückbuttons aus.</li>
</ul>
<b>Version 1.283</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Letztes Element einer Playliste löste Fehler beim erstellen des Vor- und Zurückbuttons aus.</li>
</ul>
<b>Version 1.282</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Wenn Anzahl Autoplay grösser 0, wird Autoplay automatisch aktiviert und bei kleiner oder gleich 0 deaktiviert.</li>
</ul>
<b>Version 1.281</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Vor- und Zurückbutton bei Suchresultaten haben nicht funktioniert.</li>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Gemischte Playlisten (Audio/Video/Bild) konnten nicht korrekt wiedergegeben werden</li>
</ul>
<b>Version 1.28</b>:<br>
<ul>
    <li>[<span style="color: #e21af3">BUG</span>] Erstes Element eines Ordners kann nicht mittels Autoplay gestartet werden.</li>
    <li>[<span style="color: #e21af3">BUG</span>] Ordnerübergreifendes Autoplay funktioniert noch nicht, sofern Ordner und Medieninhalt im selben Elternordner sind</li>